--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> 
+	
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,16 +18,17 @@
 	<!-- Javascript Framework (e.g., vue.js) (ADD HERE) -->
 
 
+	<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
 </head>
-
+ 
   <body>
 	<div id="vue_app" class="container">
 
 	    <div class="header">
 
 	      <div class="container">
-	        <h1 id="app_title">%title%</h1>
+	        <h1 id="app_title">{{ title }}</h1>
 	      </div>
 
 	    </div>
@@ -34,21 +37,21 @@
 
 	      <div class="row">
 
-	        <div class="col-md-6">
+	        <div class="col-md-6" v-for="(movie, index) in movies"> 
 	            <div class="thumbnail">
 
-						<img class="poster img-fluid" />
-						<div class="imageInfo">%posterindex%</div>
+						<img class="poster img-fluid" :src="movies[index].posters[0]" />
+						<div class="imageInfo">{{ movies[index].posterindex }}</div>
 
-						<p class="title">%title% (%country%)</p>
-						<p class="score"><i class="bi bi-star" aria-hidden="true"></i> %iscore% </p>
-						<p class="runtime">Runtime: %runtime%</p>
-						<p class="released">Released: %released% | Rated: %rating%</p>
-						<p class="websites">Websites: <a> imdb </a> | <a>website</a></p>
+						<p class="title">{{movies[index].title}} ({{ movies[index].country }})</p>
+						<p class="score"><i class="bi bi-star" aria-hidden="true"></i> {{ movies[index].iscore }} </p>
+						<p class="runtime">Runtime: {{ movies[index].runtime }}</p>
+						<p class="released">Released: {{ movies[index].released }} | Rated: {{ movies[index].rating }}</p>
+						<p class="websites">Websites: <a :href="movies[index].imdb"> imdb </a> | <a :href="movies[index].website">website</a></p>
 
 			            <div class="social">
-			              <p class="likes"><i class="bi bi-hand-thumbs-up" aria-hidden="true"></i> %likes%</p>
-			              <p class="dislikes"><i class="bi bi-hand-thumbs-down"></i> %dislikes%</p>
+			              <p class="likes"><i class="bi bi-hand-thumbs-up" aria-hidden="true"></i> {{ movies[index].likes }}</p>
+			              <p class="dislikes"><i class="bi bi-hand-thumbs-down"></i> {{ movies[index].dislikes }}</p>
 			            </div>
 	            </div>
 	        </div>
@@ -58,8 +61,8 @@
 
 	    <div class="footer">
 	      <div class="container">
-			<a id="github" class="btn btn-lg btn-warning">
-				<i class="bi bi-github me-2"></i>%owner%
+			<a id="github" class="btn btn-lg btn-warning" :href="github">
+				<i class="bi bi-github me-2"></i>{{ owner }}
 	  		</a>
 	      </div>
 	    </div>
@@ -71,3 +74,6 @@
 
 </body>
 </html>
+  
+
+
